--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
     stdin_open: true
     ports:
       - "3000:3000"
+    depends_on:
+      - api
     networks:
       - password-brain
 
@@ -19,7 +21,7 @@ services:
       - password-brain
     volumes:
       - ./server:/app
-      - /client/node_modules
+      # - ./server/node_modules:/app/node_modules
     # - ./server/nodemon.json:/app/nodemon.json
 
   db:
