--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,15 +21,13 @@ services:
       - password-brain
     volumes:
       - ./server:/app
-      # - ./server/node_modules:/app/node_modules
-    # - ./server/nodemon.json:/app/nodemon.json
 
   db:
     image: postgres:14.3
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=$${POSTGRES_PASSWORD}
       - POSTGRES_DB=password-brain
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
     volumes:
       - data:/var/lib/postgresql/data
     ports:
