--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   }
